Updated files, created progress bar

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pomodoro Timer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h2>⏱️ Vreme za rad</h2>
+    <h2>Vreme za rad</h2>
     <div id="timer">25:00</div>
-    <div class="progress-bar" id="progress"></div>
+    <div class="progress-bar-container">
+      <div class="progress-bar-bg"></div>
+      <div class="progress-bar" id="progress"></div>
+    </div>
     
     <div class="controls">
       <button id="startBtn">▶️</button>
@@ -22,7 +26,7 @@
       <button id="breakBtn">5 min pauza</button>
     </div>
     
-    <h3>Istorija sesija:</h3>
+    <h3 class="history">Istorija sesija:</h3>
     <ul id="historyList"></ul>
   </div>
 
