Update index.html, added images

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     
     <div class="controls">
-      <button id="startBtn"><i class="fas fa-play-circle"></i></button>
-      <button id="resetBtn"><i class="fas fa-stop-circle"></i></button>
+      <button id="startBtn"><img src="img/player-play.svg" alt=""></button>
+      <button id="resetBtn"><img src="img/player-pause.svg" alt=""></button>
     </div>
     
     <div class="modes">
